--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: angular_flatpickr
-description: Angular Dart port of flatpickr (javascript date/time picker).
+description: AngularDart port of flatpickr (javascript date/time picker).
 version: 0.0.1-alpha
-#homepage: https://www.example.com
+homepage: https://github.com/alexd1971/angular_flatpickr
 author: Aleksey Danilevskiy <alexey.danilevsky@gmail.com>
 
 environment:
