--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,14 +8,14 @@ environment:
   sdk: '>=1.20.1 <2.0.0'
 
 dependencies:
-  angular: ^4.0.0
-  angular_forms: ^1.0.0
-  js: ^0.6.1
+  angular: '>=4.0.0 <5.0.0'
+  angular_forms: '>=1.0.0 < 2.0.0'
+  js: '>=0.6.1 <0.7.0'
 
 dev_dependencies:
-  angular_test: ^1.0.0
-  pageloader: ^2.2.6
-  test: ^0.12.0
+  angular_test: '>=1.0.0 <2.0.0'
+  pageloader: '>=2.2.6 <2.3.0'
+  test: '>=0.12.0 <0.13.0'
 
 transformers:
   - angular:
